# cargo-casper-contract-compile

./: README.md
contract/: Cargo.toml
contract/src/: lib.rs  main.rs
tests/: Cargo.toml
